; ModuleID = '/home/carl/AnghaBench/qmk_firmware/drivers/haptic/extr_haptic.c_haptic_reset.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/drivers/haptic/extr_haptic.c_haptic_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i8*, i8*, i32, i8* }

@haptic_config = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@HAPTIC_FEEDBACK_DEFAULT = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [29 x i8] c"haptic_config.feedback = %u\0A\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"haptic_config.mode = %u\0A\00", align 1
@HAPTIC_MODE_DEFAULT = common dso_local global i8* null, align 8
@SOLENOID_DEFAULT_DWELL = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @haptic_reset() #0 {
  %1 = alloca i8*, align 8
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @haptic_config, i32 0, i32 0), align 8
  %2 = load i8*, i8** @HAPTIC_FEEDBACK_DEFAULT, align 8
  store i8* %2, i8** %1, align 8
  %3 = load i8*, i8** %1, align 8
  store i8* %3, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @haptic_config, i32 0, i32 2), align 8
  %4 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @haptic_config, i32 0, i32 3), align 8
  %5 = call i32 @eeconfig_update_haptic(i32 %4)
  %6 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @haptic_config, i32 0, i32 2), align 8
  %7 = call i32 @xprintf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i8* %6)
  %8 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @haptic_config, i32 0, i32 1), align 8
  %9 = call i32 @xprintf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i8* %8)
  ret void
}

declare dso_local i32 @eeconfig_update_haptic(i32) #1

declare dso_local i32 @xprintf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
